--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,19 @@
             <scope>provided</scope>
        </dependency>
   </dependencies>
-  <build>
+  <build> 
     <finalName>comp367-welcome-app</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
+  
 </project>
